# moonbit-pathfinding

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  GRAPH_GUIDE.md  GRAPH_GUIDE.zh-CN.md  README.mbt.md  README.md  README.zh-CN.md  fix_warns.py  lib.mbt  moon.mod  moon.mod.json  moon.pkg  pkg.generated.mbti  push-to-upstream.sh  pushmain.sh  test-plan-playground.md
.devin/: blueprint.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bench_rust/: .gitignore  Cargo.toml  README.md
bench_rust/moon_side/: main.mbt  moon.pkg  pkg.generated.mbti
bench_rust/src/: main.rs
docs/: AI_AGENT_USAGE.md  CHAMPIONSHIP_BACKLOG.md  ECOSYSTEM_COMPARISON.md  PRODUCTION_FRONTIER_ROADMAP.md  STRATEGY_CLOSURE.md  项目申报书.md
factory-template/: README.md  moon.mod.tpl
playground/: README.md  moon.mod.json  moon.pkg  pkg.generated.mbti  solver.mbt  solver_test.mbt
scripts/: acceptance.ps1  acceptance.sh  audit_doc.ps1  benchmark_guard.ps1  benchmark_native.ps1  benchmark_native_guard.ps1  benchmark_smoke.ps1  build_playground_osm.py  check_coverage.ps1  closure_truth_guard.sh  compat_gate.py  component_gate.sh  coverage_guard.ps1  demos_guard.sh  doc_api_guard.ps1  evidence_guard.ps1  examples_guard.ps1  mooncakes_audit.ps1  proof_evidence.ps1  proof_pipeline.ps1  regression_guard.ps1  release_guard.ps1  release_ready_gate.sh  rust_comparison.ps1  verify_backends.sh  verify_mini_compiler_backends.sh  wasi_gate.sh  wasm_size_guard.ps1  wit_gate.sh
wit/: playground.wit
(+1639 files in other folders)
